--- a/blog/src/app/components/peliculas/peliculas.component.html
+++ b/blog/src/app/components/peliculas/peliculas.component.html
@@ -1,3 +1,5 @@
-<p>{{titulo}}</p>
+<h1 class="subhedaer">Peliculas</h1>
+
+<h2>{{titulo}}</h2>
 
 <button (click)="cambiarTitulo()">Pulsame</button>
