--- a/blog/src/assets/css/styles.css
+++ b/blog/src/assets/css/styles.css
@@ -93,6 +93,24 @@ body{
     color: #f13e3e !important;
 }
 
+.year-green{
+    display:block;
+    background-color: green;
+    color:white;
+    padding: 5px;
+    width: 121px;
+    text-align: center;
+}
+
+.year-red{
+    display:block;
+    background-color: red;
+    color:white;
+    padding: 5px;
+    width: 121px;
+    text-align: center;
+}
+
 #slider{
     width: 100%;
     height: 310px;
