Model's, props input and output

--- a/blog/src/app/components/formulario/formulario.component.html
+++ b/blog/src/app/components/formulario/formulario.component.html
@@ -1,1 +1,15 @@
-<h1 class="subhedaer">Formulario</h1>
+<!-- Charge component slider with prop input nombre and homeText -->
+<app-slider
+  [nombre]="'Formulario'"
+  [size]="'small'"
+></app-slider>
+
+<!-- Format conetent -->
+<div class="center">
+    <section id="content">
+        <h1 class="subhedaer">Formulario</h1>
+    </section>
+
+    <!-- Charge component sidebar -->
+    <app-sidebar></app-sidebar>
+</div>
