--- a/blog/src/app/components/home/home.component.html
+++ b/blog/src/app/components/home/home.component.html
@@ -1,1 +1,15 @@
-<h2 class="subhedaer">{{title}}</h2>
+<!-- Charge component slider with prop input nombre and homeText -->
+<app-slider
+  [nombre]="'Bienvenido al Blog en Angular'"
+></app-slider>
+
+<!-- Format conetent -->
+<div class="center">
+    <section id="content">
+        <h2 class="subhedaer">{{title}}</h2>
+
+    </section>
+
+    <!-- Charge component sidebar -->
+    <app-sidebar></app-sidebar>
+</div>
