--- a/blog/src/app/components/blog/blog.component.html
+++ b/blog/src/app/components/blog/blog.component.html
@@ -1,1 +1,16 @@
-<h1 class="subheder">Blog</h1>
+<!-- Charge component slider with prop input nombre and homeText -->
+<app-slider
+  [nombre]="'Blog'"
+  [size]="'small'"
+></app-slider>
+
+<!-- Format conetent -->
+<div class="center">
+    <section id="content">
+        <h1 class="subheder">Blog</h1>
+
+    </section>
+
+    <!-- Charge component sidebar -->
+    <app-sidebar></app-sidebar>
+</div>
