--- a/blog/src/app/components/formulario/formulario.component.html
+++ b/blog/src/app/components/formulario/formulario.component.html
@@ -8,6 +8,56 @@
 <div class="center">
     <section id="content">
         <h1 class="subhedaer">Formulario</h1>
+
+        <!-- <div id="datos-al-vuelo" *ngIf="user.nombre">
+          <h2 class="subheader">Datos al vuelo</h2>
+            <ul>
+              <li>{{user.nombre}}</li>
+              <li>{{user.apellidos}}</li>
+              <li>{{user.bio}}</li>
+              <li>{{user.genero}}</li>
+            </ul>
+        </div> -->
+
+        <form class="mid-form" #userForm="ngForm" (ngSubmit)="onSubmit()">
+          <div class="form-group">
+              <label for="nombre">Nombre</label>
+              <input name="nombre" type="text" #nombre="ngModel" [(ngModel)]="user.nombre" required/>
+            <!-- Validation -->
+              <small *ngIf="!nombre.valid && nombre.touched">El nombre no es valido</small>
+          </div>
+          <div class="form-group">
+              <label for="apellido">Apellidos</label>
+              <input name="apellido" #apellidos="ngModel" type="text" [(ngModel)]="user.apellidos" required/>
+
+              <small *ngIf="!apellidos.valid && apellidos.touched">Los apellidos no son validos</small>
+          </div>
+          <div class="form-group">
+              <label for="bio">Biografia</label>
+              <textarea name="bio" #bio="ngModel" [(ngModel)]="user.bio" required></textarea>
+              <small *ngIf="!bio.valid && bio.touched">La bio no es valida</small>
+          </div>
+          <div class="form-group radiobuttons">
+              <input name="genero" #genero="ngModel" [(ngModel)]="user.genero" type="radio" value="hombre"/>Hombre
+              <input name="genero" #genero="ngModel" [(ngModel)]="user.genero" type="radio" value="mujer">Mujer
+              <input name="genero" #genero="ngModel" [(ngModel)]="user.genero" type="radio" value="otro">Otro
+              <small *ngIf="!genero.valid && genero.touched">El genero no es valido</small>
+          </div>
+          <div class="clearfix"></div>
+          <input class="btn btn-success" [disabled]="userForm.invalid" type="submit" value="Enviar">
+        </form>
+
+        <h2 class="subheader">Evenetos</h2>
+        <!-- Event onclick -->
+        <button (click)="hasDadoClick()">Dale click</button>
+
+        <!-- Event onBlur -->
+        <input (blur)="hasSalido()" type="text" [(ngModel)]="campo"/>
+        {{campo}}
+
+        <!-- Event keyup can be without .enter -->
+        <input (keyup.enter)="hasClicadoEnter()" type="text" [(ngModel)]="campo"/>
+
     </section>
 
     <!-- Charge component sidebar -->
