View home, blog, article and search

--- a/blog/src/assets/css/styles.css
+++ b/blog/src/assets/css/styles.css
@@ -217,6 +217,7 @@ body{
     transition: 300ms all;
     border:none;
     cursor: pointer;
+    text-align: center;
 }
 
 .btn-success{
@@ -225,6 +226,28 @@ body{
 
 .btn-success:hover{
     background-color:black;
+}
+
+.btn-warning{
+    background-color: rgb(238, 165, 6);
+    color: white !important;
+    text-decoration: none;
+}
+
+.btn-danger{
+    background-color: rgb(201, 21, 21);
+    color: white !important;
+    text-decoration: none;
+}
+
+.btn-warning:hover, .btn-danger:hover{
+    text-decoration: none;
+    transition: all 300ms;
+    opacity: 0.8;
+}
+
+.buttons{
+    margin-top:30px;
 }
 
 .mid-form{
@@ -411,6 +434,15 @@ textarea{
 
     .mid-form{
         width:70%;
+    }
+}
+
+@media (max-width: 630px){
+    #sidebar {
+        float: none;
+        width: 60%;
+        margin: 0px auto;
+        margin-bottom: 50px;
     }
 }
 
