--- a/blog/src/app/components/blog/blog.component.html
+++ b/blog/src/app/components/blog/blog.component.html
@@ -9,18 +9,10 @@
     <section id="content">
         <h1 class="subheder">Blog</h1>
 
-        <div id="articles" *ngFor="let article of articles">
-          <article class="article-item" id="article-template">
-              <div class="image-wrap">
-                  <img alt="{{article.title}}" *ngIf="article.image" src="{{url+'/get-image/'+article.image}}"/>
-                  <img alt="{{article.title}}" *ngIf="!article.image" src="assets/images/default.png"/>
-              </div>
-              <h2>{{article.title}}</h2>
-              <span class="date">{{article.date}}</span>
-              <a href="#">Leer mas</a>
-              <div class="clearfix"></div>
-          </article>
-      </div> 
+        <!-- Charge generic view article -->
+        <app-articles
+          [articles]="articles"
+        ></app-articles>
     </section>
 
     <!-- Charge component sidebar -->
