--- a/blog/src/app/components/home/home.component.html
+++ b/blog/src/app/components/home/home.component.html
@@ -8,6 +8,9 @@
     <section id="content">
         <h2 class="subhedaer">{{title}}</h2>
 
+        <app-articles
+          [articles]="articles"
+        ></app-articles>
     </section>
 
     <!-- Charge component sidebar -->
