--- a/blog/src/app/components/sidebar/sidebar.component.html
+++ b/blog/src/app/components/sidebar/sidebar.component.html
@@ -7,8 +7,8 @@
     <div class="sidebar-item" id="search">
         <h3>Buscador</h3>
         <p>Encuentra el articulo que buscas</p>
-        <form action="">
-            <input name="search" type="text"/>
+        <form #searchForm="ngForm" (ngSubmit)="goSearch()">
+            <input name="search" [(ngModel)]="searchString" type="text"/>
             <input class="btn" name="submit" type="submit" value="Buscar"/>
         </form>
     </div>
