--- a/blog/src/app/components/sidebar/sidebar.component.html
+++ b/blog/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <aside id="sidebar">
     <div class="sidebar-item" id="nav-blog">
         <h2>Puedes hacer esto</h2>
-        <a class="btn btn-success" href="">Crear articulo</a>
+        <a class="btn btn-success" [routerLink]="['/blog/crear']">Crear articulo</a>
     </div>
 
     <div class="sidebar-item" id="search">
